# fswatch

./: .travis.yml  Cargo.toml  README.md
.travis/: after_success.sh  before_install.sh  script.sh
src/: ffi.rs  lib.rs  test.rs
