[package]
name = "fswatch-sys"
version = "0.1.6"
description = "FFI definitions for libfswatch"
authors = ["Kyle Clemens <me@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/fswatch-sys"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
libc = "0.2"
cfg-if = "0.1"
time = {version = "0.1", optional = true}

[build-dependencies]
semver = "0.5"

[features]
default = []
use_time = ["time"]
1_10_0 = []
