[package]
name = "fswatch"
version = "0.1.10"
description = "Rust wrapper for fswatch-sys"
authors = ["Kyle Clemens <me@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/fswatch-sys"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
fswatch-sys = { path = "../fswatch-sys" }
libc = "0.2"
time = {version = "0.1", optional = true}

[features]
default = []
use_time = ["time"]
